--- a/src/app/sections/discover/discover.component.html
+++ b/src/app/sections/discover/discover.component.html
@@ -5,15 +5,15 @@
     <!-- Filtros circulares -->
     <div class="wiki-filters d-flex justify-content-center gap-4 mb-4">
       <button class="btn btn-circle" type="button" aria-label="Dota 2">
-        <img src="assets/images/dota2-logo.png" alt="Dota 2" />
+        <img src="assets/images/dota2-logo.jpg" alt="Dota 2" />
       </button>
 
       <button class="btn btn-circle" type="button" aria-label="CS:GO">
-        <img src="assets/images/csgo-logo.png" alt="CS:GO" />
+        <img src="/assets/images/csgo-logo.png" alt="CS:GO" />
       </button>
 
       <button class="btn btn-circle" type="button" aria-label="League of Legends">
-        <img src="assets/images/lol-logo.png" alt="League of Legends" />
+        <img src="assets/images/lol-logo.jpg" alt="League of Legends" />
       </button>
     </div>
   </div>
