discover cambia a favs

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
           <a class="nav-link" routerLink="/categories" routerLinkActive="active">CATEGORIES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/discover" routerLinkActive="active">DISCOVER</a>
+          <a class="nav-link" routerLink="/discover" routerLinkActive="active">WIKI</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/favs" routerLinkActive="active">FAVS</a>
