Arreglado fondo de 'Discover'

--- a/src/app/sections/discover/discover.component.css
+++ b/src/app/sections/discover/discover.component.css
@@ -1,4 +1,9 @@
 /* ===== ESTILOS PRINCIPALES ===== */
+.section-wiki {
+  background-color: #000; 
+  min-height: 100vh; 
+}
+
 .esports-home {
   padding-top: 3rem;
   background-color: #1a1a1a;
