Incorporados fondos verticales laterales en 'Home'

--- a/src/app/sections/home/home.component.html
+++ b/src/app/sections/home/home.component.html
@@ -14,6 +14,16 @@
     </div>
   </section>
 
+  <!-- TIRAS LATERALES DECORATIVAS -->
+  <!-- TIRAS LATERALES -->
+  <div class="strip-container d-none d-xl-block">
+    <img src="assets/images/vertical-background.jpg" class="side-fill-img side-left d-none d-xl-block"
+      alt="Decoración izquierda" />
+    <img src="assets/images/vertical-background.jpg" class="side-fill-img side-right d-none d-xl-block"
+      alt="Decoración derecha" />
+  </div>
+
+
   <!-- === GAME CARDS SECTION === -->
   <section class="section-game-cards py-4 bg-black">
     <div class="container">
